# pig-souls

./: .gitattributes  Cargo.toml  README.md
assets/: area_0001.glb
assets/environment_maps/: cubes_reflection_probe_specular_rgb9e5_zstd.ktx2  info.txt  sky_skybox.ktx2
assets/models/: broken_vase.glb  intact_vase.glb
assets/models/animated/: Fox.glb
src/: animation.rs  breakable.rs  camera.rs  character_controller.rs  fx.rs  game_states.rs  main.rs  menu.rs  physics.rs  player.rs  proc.rs  world.rs
src/character_controller/: components.rs  input.rs  physics.rs  states.rs
src/proc/: anim.rs  plugin.rs  rules.rs  utils.rs
