[package]
name = "pig_souls"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "*", features = ["dynamic_linking"]}
avian3d = {version = "*"}
bevy_hanabi = {git = "https://github.com/djeedai/bevy_hanabi", branch="main", default-features = true, features = [ "3d", "serde" ] }
bevy_skein = "*"

rand = "0.8.5"
bevy-inspector-egui = {version = "*"}
bevy_foliage_tool = "0.15.14"

# Optimizations in debug mode
[profile.dev]
opt-level = 1

# High optimizations for depencencies
[profile.dev.package."*"]
opt-level = 3
