[package]
name = "pig_souls"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.15.3", features = ["dynamic_linking"]}
avian3d = {version = "0.2.1"}
bevy_hanabi = "*"
bevy_skein = "*"

rand = "0.8.5"
bevy-inspector-egui = {version = "*"}
bevy_ghx_proc_gen = { git = "https://github.com/Henauxg/ghx_proc_gen", branch= "main" }

# Optimizations in debug mode
[profile.dev]
opt-level = 1

# High optimizations for depencencies
[profile.dev.package."*"]
opt-level = 3
